Fixed spacing for authors in post list

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -222,6 +222,10 @@
   }
 }
 
+.post-h3 {
+  margin-bottom: 0;
+}
+
 .post-meta {
   font-size: $small-font-size;
   color: $brand-color;
